Fixed scrollbars

--- a/client/src/styles/scss/styles.scss
+++ b/client/src/styles/scss/styles.scss
@@ -65,9 +65,13 @@ $accordion-bg:$darkpurple;
   overflow-x: hidden;
   padding-top: 0px;
   border-top:10px;
+  
 }
 
-
+#container {
+  overflow-x:auto;
+  height: 100vh;
+}
 .row {
     margin-top: 5px !important;
 }
